--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title><Title></Title></title>
+</head>
+
+<body>
+  <h1>Hello world</h1>
+</body>
+
 </html>
